--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </head>
   <body>
     <div class="profile-card">
-      절대 경로로 이미지 삽입하기
+      <!-- 절대 경로로 이미지 삽입하기-->
       <!-- Github에서 절대 경로는 권장되지 않습니다. -->
       <!-- 이유 1 : 저장소의 이름을 homework에서 다른 이름으로 변경할 경우 모든 절대 경로를 수정해야 합니다. -->
       <!-- Github 배포를 위해 절대 경로를 사용할 경우 로컬에서 확인이 불가합니다. (https://localhost:8090으로 접속했을 때 homework을 찾지 못함) -->
