--- a/src/avatars/avatars.html
+++ b/src/avatars/avatars.html
@@ -12,15 +12,41 @@
   </head>
   <body>
     <!-- 여기에 마크업을 구성해 주세요. -->
-    <ul>
-      <li><img src="face1.jpg" alt="" /></li>
-      <li><img src="face2.jpg" alt="" /></li>
-      <li><img src="face3.jpg" alt="" /></li>
-      <li><img src="face4.jpg" alt="" /></li>
-      <li><img src="face5.jpg" alt="" /></li>
-      <li><img src="face6.jpg" alt="" /></li>
-      <li><img src="face7.jpg" alt="" /></li>
-      <li><img src="face8.jpg" alt="" /></li>
+    <ul class="images_t" type="none">
+      <li>
+        <div class="avatars"><img src="./images/face1.jpg" alt="1번 얼굴" /></div>
+        <div class="status gray"></div>
+      </li>
+      <li>
+        <div class="avatars"><img src="./images/face2.jpg" alt="2번 얼굴" /></div>
+        <div class="status green"></div>
+      </li>
+      <li>
+        <div class="avatars"><img src="./images/face3.jpg" alt="3번 얼굴" /></div>
+        <div class="status gray"></div>
+      </li>
+      <li>
+        <div class="avatars"><img src="./images/face4.jpg" alt="4번 얼굴" /></div>
+        <div class="status green"></div>
+      </li>
+    </ul>
+    <ul class="images_b" type="none">
+      <li>
+        <div class="avatars"><img src="./images/face5.jpg" alt="5번 얼굴" /></div>
+        <div class="status green"></div>
+      </li>
+      <li>
+        <div class="avatars"><img src="./images/face6.jpg" alt="6번 얼굴" /></div>
+        <div class="status gray"></div>
+      </li>
+      <li>
+        <div class="avatars"><img src="./images/face7.jpg" alt="7번 얼굴" /></div>
+        <div class="status green"></div>
+      </li>
+      <li>
+        <div class="avatars"><img src="./images/face8.jpg" alt="8번 얼굴" /></div>
+        <div class="status gray"></div>
+      </li>
     </ul>
   </body>
 </html>
