--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <li><a href="./src/md/markdown.md">마크다운 문법</a></li>
         <li><a href="./src/md/week1-retrospect.md">1주차 회고</a></li>
         <li><a href="./src/avatars/avatars.html">Avatars 과제</a></li>
+        <li><a href="./src/md/week2-retrospect.md">2주차 회고</a></li>
       </ul>
     </div>
   </body>
