3주차 과제 받아오기

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
       <p class="bio">멋쟁이 사자처럼 프론트엔드 부트캠프 14기 정윤서 입니다.</p>
       <p>과제 결과는 링크를 선택해주세요.</p>
       <ul class="homework-links">
-        <li><a href="./src/md/markdown.md">마크다운 문법</a></li>
-        <li><a href="./src/md/week1-retrospect.md">1주차 회고</a></li>
-        <li><a href="./src/avatars/avatars.html">Avatars 과제</a></li>
-        <li><a href="./src/md/week2-retrospect.md">2주차 회고</a></li>
+        <li><a href="./src/md/markdown.md">마크다운 과제</a></li>
+        <li><a href="./src/avatars/avatars.html">아바타 과제</a></li>
+        <li><a href="./src/login/login.html">로그인 과제</a></li>
+        <li><a href="/">마지막 과제</a></li>
       </ul>
     </div>
   </body>
