--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <li><a href="./src/md/markdown.md">마크다운 과제</a></li>
         <li><a href="./src/avatars/avatars.html">아바타 과제</a></li>
         <li><a href="./src/login/login.html">로그인 과제</a></li>
-        <li><a href="./src/">애플 과제</a></li>
+        <li><a href="./src/apple/apple.html">애플 과제</a></li>
       </ul>
     </div>
   </body>
