4w 과제 1차 커밋

--- a/src/apple/apple.html
+++ b/src/apple/apple.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -11,6 +11,73 @@
   </head>
   <body>
     <!-- 카드 레이아웃 -->
-
+    <!-- <div class="productCard prodName">
+      <h2>productName</h2>
+      <p class="promotion">phrase</p>
+      <a href="/" target="_blank">더 알아보기</a>
+      <a href="/" target="_blank">가격 보기</a>
+    </div> -->
+   
+    <div class="container">
+      <div class="productCard iPadPro">
+        <h2>iPad Pro</h2>
+        <p class="promotion">놀라우리만치 얇다.<br />엄청나게 강력하다.</p>
+        <p class="date">출시일 추후 공개</p>
+        <div class="buttonWrapper">
+          <a class="button more" href="https://www.apple.com/kr/ipad-pro/" target="_blank">더 알아보기</a>
+          <a class="button price" href="https://www.apple.com/kr/shop/buy-ipad/ipad-pro" target="_blank">가격 보기</a>
+        </div>
+      </div>
+      <div class="productCard iPadAir">
+        <h2>iPad air</h2>
+        <p class="promotion">두 가지 사이즈. 더 빠른 칩.<br />무엇이든 거뜬하게.</p>
+        <p class="date">출시일 추후 공개</p>
+        <div class="buttonWrapper">
+          <a class="button more" href="https://www.apple.com/kr/ipad-air/" target="_blank">더 알아보기</a>
+          <a class="button price" href="https://www.apple.com/kr/shop/buy-ipad/ipad-air" target="_blank">가격 보기</a>
+        </div>
+      </div>
+      <div class="productCard iPhone15Pro">
+        <h2>iPhone 15 Pro</h2>
+        <p class="promotion">티타늄. 초강력. 초경량. 초프로.</p>
+        <div class="buttonWrapper">
+          <a class="button more" href="https://www.apple.com/kr/iphone-15/specs/" target="_blank">더 알아보기</a>
+          <a class="button price" href="https://www.apple.com/kr/shop/buy-iphone/iphone-15" target="_blank">가격 보기</a>
+        </div>
+      </div>
+      <div class="productCard iPhone15">
+        <h2>iPhone 15</h2>
+        <p class="promotion">새로운 카메라.<br />새로운 디자인.<br />새로움이 물씬.</p>
+        <div class="buttonWrapper">
+          <a class="button more" href="https://www.apple.com/kr/iphone-15/specs/" target="_blank">더 알아보기</a>
+          <a class="button price" href="https://www.apple.com/kr/shop/buy-iphone/iphone-15" target="_blank">가격 보기</a>
+        </div>
+      </div>
+      <div class="productCard watch">
+        <h2>WATCH</h2>
+        <p class="promotion">보다 똑똑. 보다 또력. 보다 강력.</p>
+        <div class="buttonWrapper">
+          <a class="button more" href="https://www.apple.com/kr/apple-watch-series-10/" target="_blank">더 알아보기</a>
+          <a class="button price" href="https://www.apple.com/kr/shop/buy-watch/apple-watch" target="_blank">가격 보기</a>
+        </div>
+      </div>
+      <div class="productCard macbookAir">
+        <h2>MacBook Air</h2>
+        <p class="promotion">날렵하게. 강력하게. M3답게.</p>
+        <div class="buttonWrapper">
+          <a class="button more" href="https://www.apple.com/kr/macbook-air/" target="_blank">더 알아보기</a>
+          <a class="button price" href="https://www.apple.com/kr/shop/buy-mac/macbook-air" target="_blank">가격 보기</a>
+        </div>
+      </div>
+      <div class="productCard airpodsPro">
+        <h2>airPods Pro</h2>
+        <p class="promotion">전에 없던 청취 경험.<br />적응형 오디오.</p>
+        <div class="buttonWrapper">
+          <a class="button more" href="https://www.apple.com/kr/airpods-pro/" target="_blank">더 알아보기</a>
+          <a class="button price" href="https://www.apple.com/kr/shop/buy-airpods/airpods-pro-2" target="_blank">가격 보기</a>
+        </div>
+      </div> 
+    </div>
+    
   </body>
 </html>
