4w 과제 2차 커밋(디자인, 배치, 버튼, 반응형 완성)

--- a/src/apple/apple.html
+++ b/src/apple/apple.html
@@ -19,7 +19,7 @@
     </div> -->
    
     <div class="container">
-      <div class="productCard iPadPro">
+      <div class="productCard iPadPro onecell">
         <h2>iPad Pro</h2>
         <p class="promotion">놀라우리만치 얇다.<br />엄청나게 강력하다.</p>
         <p class="date">출시일 추후 공개</p>
@@ -28,7 +28,7 @@
           <a class="button price" href="https://www.apple.com/kr/shop/buy-ipad/ipad-pro" target="_blank">가격 보기</a>
         </div>
       </div>
-      <div class="productCard iPadAir">
+      <div class="productCard iPadAir onecell">
         <h2>iPad air</h2>
         <p class="promotion">두 가지 사이즈. 더 빠른 칩.<br />무엇이든 거뜬하게.</p>
         <p class="date">출시일 추후 공개</p>
@@ -37,7 +37,7 @@
           <a class="button price" href="https://www.apple.com/kr/shop/buy-ipad/ipad-air" target="_blank">가격 보기</a>
         </div>
       </div>
-      <div class="productCard iPhone15Pro">
+      <div class="productCard iPhone15Pro onecell">
         <h2>iPhone 15 Pro</h2>
         <p class="promotion">티타늄. 초강력. 초경량. 초프로.</p>
         <div class="buttonWrapper">
@@ -45,7 +45,7 @@
           <a class="button price" href="https://www.apple.com/kr/shop/buy-iphone/iphone-15" target="_blank">가격 보기</a>
         </div>
       </div>
-      <div class="productCard iPhone15">
+      <div class="productCard iPhone15 twocells">
         <h2>iPhone 15</h2>
         <p class="promotion">새로운 카메라.<br />새로운 디자인.<br />새로움이 물씬.</p>
         <div class="buttonWrapper">
@@ -53,7 +53,7 @@
           <a class="button price" href="https://www.apple.com/kr/shop/buy-iphone/iphone-15" target="_blank">가격 보기</a>
         </div>
       </div>
-      <div class="productCard watch">
+      <div class="productCard watch twocells">
         <h2>WATCH</h2>
         <p class="promotion">보다 똑똑. 보다 또력. 보다 강력.</p>
         <div class="buttonWrapper">
@@ -61,7 +61,7 @@
           <a class="button price" href="https://www.apple.com/kr/shop/buy-watch/apple-watch" target="_blank">가격 보기</a>
         </div>
       </div>
-      <div class="productCard macbookAir">
+      <div class="productCard macbookAir twocells">
         <h2>MacBook Air</h2>
         <p class="promotion">날렵하게. 강력하게. M3답게.</p>
         <div class="buttonWrapper">
@@ -69,7 +69,7 @@
           <a class="button price" href="https://www.apple.com/kr/shop/buy-mac/macbook-air" target="_blank">가격 보기</a>
         </div>
       </div>
-      <div class="productCard airpodsPro">
+      <div class="productCard airpodsPro twocells">
         <h2>airPods Pro</h2>
         <p class="promotion">전에 없던 청취 경험.<br />적응형 오디오.</p>
         <div class="buttonWrapper">
